Send email notification to the host organizer and shared users when the tournament start/complete Fix issue on the reservation when the visibility is off

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -556,12 +556,6 @@
   clear: both;
 }
 
-.bg-cs .brackets .round-name-wrapper .btn {
-  color: #fff;
-  background: none;
-  border: none;
-}
-
 .brackets .round-name-wrapper {
   position: relative;
 }
